fixed gap bug
react beautiful dnd has a bug so it does not consider 'gap' css into consideration so margin has to be used

--- a/src/pages/sprint-view/sprint-view.css
+++ b/src/pages/sprint-view/sprint-view.css
@@ -35,9 +35,13 @@
     min-width: 150px;
     max-width: 300px;
     background: #f4f5f7;
-    padding: 0.35rem;
-    gap: 0.35rem;
+    padding: 0.35rem 0.35rem 0;
 }
+
+.sprint-epic-task-placeholder > * {
+    margin-bottom: 0.35rem;
+}
+
 
 .sprint-status-header .sprint-epic-task-placeholder {
     padding: 1rem;
@@ -62,4 +66,8 @@
     background: white;
     padding: 0.5rem;
     box-shadow: rgba(9, 30, 66, 0.25) 0 1px 2px 0;
+}
+
+.task-card.dragging {
+    /* margin: 0.25rem 0 1rem; */
 }
